--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.rangeSlider input[type="range"]::-webkit-slider-thumb {
+  border: 2px solid #fff;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+input[type="range"] {
+  appearance: none;
+  margin: 0;
+  padding: 0;
+}
