--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  .windowArrow {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 100% 100%);
+  }
+}
+
 .rangeSlider input[type="range"]::-webkit-slider-thumb {
   border: 2px solid #fff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
