--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,35 @@ input[type="range"] {
   margin: 0;
   padding: 0;
 }
+
+.horizontal-slider {
+  width: 100%;
+  height: 8px;
+  max-width: 240px;
+  border: 1px solid #ddd;
+  border-radius: 1rem;
+  background-color: #e2e8f0;
+}
+.horizontal-slider .thumb {
+  width: 20px;
+  height: 20px;
+  background-color: black;
+  border-radius: 50%;
+  transform: translateY(-0.5rem);
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+.horizontal-slider .thumb:before {
+  content: "";
+  background-color: #e2e8f0;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.horizontal-slider .track-1 {
+  background-color: black;
+  height: 100%;
+}
