--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
     clip-path: polygon(0 0, 100% 0, 100% 100%, 100% 100%);
   }
 }
-
+/*
 .rangeSlider input[type="range"]::-webkit-slider-thumb {
   border: 2px solid #fff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -17,6 +17,7 @@ input[type="range"] {
   margin: 0;
   padding: 0;
 }
+  */
 
 .horizontal-slider {
   width: 100%;
