--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,19 @@
     clip-path: polygon(0 0, 100% 0, 100% 100%, 100% 100%);
   }
 }
+.tabletCardSlider .splide__slide {
+  width: 325px !important; /* Ensures slides always have this width */
+  /* margin-right: 9px; */
+}
+
+.tabletCardSlider .splide__list {
+  display: flex;
+  gap: 0.75rem; /* Adjusts space between slides */
+}
+.tabletCardSlider {
+  overflow-x: hidden !important;
+}
+
 /*
 .rangeSlider input[type="range"]::-webkit-slider-thumb {
   border: 2px solid #fff;
