compare_card_part_1

--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,7 @@
   }
 }
 .tabletCardSlider .splide__slide {
-  width: 325px !important; /* Ensures slides always have this width */
-  /* margin-right: 9px; */
+  width: 325px !important;
 }
 
 .tabletCardSlider .splide__list {
@@ -20,17 +19,8 @@
   overflow-x: hidden !important;
 }
 
-/*
-.rangeSlider input[type="range"]::-webkit-slider-thumb {
-  border: 2px solid #fff;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-input[type="range"] {
-  appearance: none;
-  margin: 0;
-  padding: 0;
-}
-  */
+/* Rotate Search Location Cards */
+
 .locationCard .splide__pagination {
   display: none;
 }
@@ -42,6 +32,14 @@ input[type="range"] {
   width: 12px;
   height: 10px;
 }
+
+@media (max-width: 768px) {
+  .locationCard .splide__arrow {
+    display: none;
+  }
+}
+
+/* */
 
 .horizontal-slider {
   width: 100%;
