--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,30 @@
     clip-path: polygon(0 0, 100% 0, 100% 100%, 100% 100%);
   }
 }
+
+/* Compare Card Custom Scrollbar */
+
+.scrollbar-custom::-webkit-scrollbar {
+  width: 16px;
+  height: 16px;
+  max-width: 200px;
+  max-height: 200px;
+  border-radius: 8px;
+  background-color: #f2f2f2;
+}
+.scrollbar-custom::-webkit-scrollbar-thumb {
+  background-color: black;
+  border-radius: 8px;
+  width: 99px;
+  border: 4px solid white;
+}
+.scrollbar-custom::-webkit-scrollbar-track {
+  background: white;
+  border-radius: 8px;
+}
+
+/* Compare Card Custom Scrollbar */
+
 .tabletCardSlider .splide__slide {
   width: 325px !important;
 }
