--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,9 @@
     clip-path: polygon(0 0, 100% 0, 100% 100%, 100% 100%);
   }
 }
-
+.custom-resize::-webkit-resizer {
+  filter: brightness(0.7); /* gri ton verir */
+}
 /* Compare Card Custom Scrollbar */
 .scrollbar-custom::-webkit-scrollbar {
   width: 16px;
