--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 8px;
+  gap: 16px;
   background-color: black;
-  padding: 6px 16px;
+  padding: 3px 16px 7px;
   border-radius: 999px;
   width: fit-content;
   position: absolute;
@@ -32,7 +32,7 @@
 }
 
 .customSlider .splide__pagination__page.is-active {
-  width: 24px;
+  width: 48px;
   height: 8px;
   border-radius: 12px;
   background-color: white;
