--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@
   padding: 3px 16px 7px;
   border-radius: 999px;
   width: fit-content;
+  min-width: 240px;
   position: absolute;
   bottom: -60px;
   left: 50%;
@@ -40,7 +41,7 @@
 }
 
 .custom-resize::-webkit-resizer {
-  filter: brightness(0.7); /* gri ton verir */
+  display: none;
 }
 /* Compare Card Custom Scrollbar */
 .scrollbar-custom::-webkit-scrollbar {
