--- a/src/index.css
+++ b/src/index.css
@@ -105,12 +105,11 @@
   }
 }
 
-/* */
+/* Slider */
 
 .horizontal-slider {
   width: 100%;
   height: 8px;
-  max-width: 240px;
   border: 1px solid #ddd;
   border-radius: 1rem;
   background-color: #e2e8f0;
