--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,9 @@
   left: 50%;
   transform: translateX(-50%);
 }
+.customSlider.unitDetailSlider .splide__pagination {
+  bottom: -40px;
+}
 
 .customSlider .splide__pagination__page {
   width: 8px;
